--- a/app/src/main/res/layout/activity_admin_add_new_product.xml
+++ b/app/src/main/res/layout/activity_admin_add_new_product.xml
@@ -14,6 +14,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="15dp"
         android:cropToPadding="false"
+        android:adjustViewBounds="true"
         android:scaleType="centerCrop"
         android:src="@drawable/select_product_image" />
     <EditText
