--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -25,6 +25,21 @@
             android:layout_marginTop="10dp"/>
 
     </RelativeLayout>
+    
+    <TextView
+        android:id="@+id/msg1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="@color/Green"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:textAlignment="center"
+        android:layout_centerVertical="true"
+        android:text="Congratulations Your Final Order Has Been Placed Successfully.
+Soon It Will Be Verified."
+        android:textSize="20dp"
+        android:visibility="gone"
+        />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/cart_list"
@@ -50,3 +65,6 @@
 
 
 </RelativeLayout>
+
+
+
