--- a/app/src/main/res/layout/activity_admin_category.xml
+++ b/app/src/main/res/layout/activity_admin_category.xml
@@ -143,16 +143,30 @@
 
         <ImageView
             android:id="@+id/cookers"
-            android:layout_width="90dp"
-            android:layout_height="110dp"
-            android:src="@drawable/cooker"
-            />
+            android:layout_width="132dp"
+            android:layout_height="100dp"
+            android:src="@drawable/cooker" />
     </LinearLayout>
+
+    <Button
+        android:id="@+id/maintain_btn"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_above="@id/check_orders_btn"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/input_design"
+        android:backgroundTint="@color/Green"
+        android:text="Maintain Products"
+        android:textColor="@color/White"
+        android:textSize="20dp"
+        android:textAllCaps="false"/>
 
     <Button
         android:id="@+id/check_orders_btn"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_above="@id/admin_logout_btn"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
@@ -166,7 +180,7 @@
     <Button
         android:id="@+id/admin_logout_btn"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_alignParentBottom="true"
         android:layout_marginLeft="20dp"
         android:layout_marginBottom="20dp"
