--- a/app/src/main/res/layout/activity_confirm_final_order.xml
+++ b/app/src/main/res/layout/activity_confirm_final_order.xml
@@ -51,7 +51,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginLeft="20dp"
         android:background="@drawable/input_design"
-        android:inputType="text"
+        android:inputType="textCapWords"
         android:padding="10dp"
         android:layout_marginRight="20dp"
         android:hint="Your Home Address"/>
@@ -66,7 +66,7 @@
         android:background="@drawable/input_design"
         android:padding="10dp"
         android:layout_marginRight="20dp"
-        android:inputType="text"
+        android:inputType="textCapWords"
         android:hint="Your City Name"/>
 
     <Button
