--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -17,7 +17,7 @@
         <item
             android:id="@+id/nav_order"
             android:icon="@drawable/orders"
-            android:title="Order"
+            android:title="Search"
             android:iconTint="@color/White"/>
         <item
             android:id="@+id/nav_categories"
