--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -35,7 +35,7 @@
         android:layout_marginEnd="10dp"
         android:textAlignment="center"
         android:layout_centerVertical="true"
-        android:text="Congratulations Your Final Order Has Been Placed Successfully.
+        android:text="Congratulations!!! Your Final Order Has Been Placed Successfully.
 Soon It Will Be Verified."
         android:textSize="20dp"
         android:visibility="gone"
